syntax = "proto3";

package room;

service RoomService {
  rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
  rpc LeaveRoom (LeaveRoomRequest) returns (LeaveRoomResponse);
  rpc UpdateMediaState (UpdateMediaStateRequest) returns (UpdateMediaStateResponse);
  rpc StreamRoomEvents (StreamRoomEventsRequest) returns (stream RoomEvent);
}

message JoinRoomRequest {
  string event_id = 1;
  string user_id = 2;
  bool is_host = 3;
}

message JoinRoomResponse {
  bool ok = 1;
}

message LeaveRoomRequest {
  string event_id = 1;
  string user_id = 2;
}

message LeaveRoomResponse {
  bool ok = 1;
}

message UpdateMediaStateRequest {
  string event_id = 1;
  bool has_video = 2;
  bool has_audio = 3;
  bool has_screen = 4;
}

message UpdateMediaStateResponse {
  bool ok = 1;
}

message StreamRoomEventsRequest {
  string event_id = 1;
}

message RoomEvent {
  string type = 1; // USER_JOINED, USER_LEFT, HOST_MEDIA_UPDATED, etc.
  string user_id = 2;
  string payload_json = 3; // flexible payload for now
}


